# odin_editor

./: .gitignore  Makefile  build.bat  flake.nix  readme.md  todo.md
.devcontainer/: devcontainer.json
.devcontainer/odin-feature/: devcontainer-feature.json  install.sh
editor/: Cargo.toml
editor/src/: main.rs  shader.wgsl
editor/src/editor_core/ui/: mod.rs
lib-rg/: Cargo.toml
lib-rg/src/: lib.rs
plugin-rs-bindings/: Cargo.toml
plugin-rs-bindings/src/: lib.rs
plugins/buffer_search/: plugin.odin
plugins/default_view/: init.lua
plugins/grep/: Cargo.toml  rust-toolchain.toml
plugins/grep/src/: lib.rs
plugins/highlighter/src/: plugin.odin
plugins/lua/: lib.lua  view.lua
plugins/odin_highlighter/src/: plugin.odin
src/: main.odin
src/core/: core.odin  error.odin  file_buffer.odin  font_darwin.odin  gfx.odin  glyph_buffer.odin  history.odin  logger.odin  piece_table.odin
src/input/: input.odin
src/jobs/: job.odin
src/lua/: lua.odin  lua.odin~
src/panels/: command_palette.odin  debug.odin  file_buffer.odin  font_selector.odin  grep.odin  panels.odin
src/pkg/grep_lib/: Cargo.toml
src/pkg/grep_lib/src/: lib.rs
src/plugin/: plugin.odin
src/tests/: tests.odin
src/theme/: theme.odin
src/tree_sitter/: ts.odin
src/ui/: buffer_list_window.odin  components.odin  floating_window.odin  grep_window.odin  imm.odin  ui.odin
src/util/: list.odin
src/util/ring_buffer/: queue.odin  ring_buffer.odin
