[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-graphics = "0.22.3"
futures = "0.3.30"
piet-common = "0.6.2"
piet-coregraphics = "0.6.2"
wgpu = "0.19.1"
winit = "0.29.10"
